# viewdeb

./: .gitignore  CLAUDE.md  README.EN.md  README.md  index.html  middleware.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.clinerules/: memories.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/commands/: parse.rs
src-tauri/src/extractors/: deb.rs  elf.rs  mod.rs
src-tauri/src/utils/: shell.rs
src/app/[locale]/: error.tsx  layout.tsx  not-found.tsx  page.tsx
src/app/api/parse/: route.ts
src/components/: FileUpload.tsx  LanguageSelector.tsx  PackageView.tsx  ThemeToggle.tsx
src/i18n/: i18n-config.ts  request.tsx  routing.ts
src/i18n/messages/: en.json  zh.json
src/lib/extractors/: debianExtractor.ts
src/lib/i18n/: index.tsx
src/lib/i18n/messages/: en.json  zh.json
src/lib/platform/: index.ts  native.ts  types.ts
src/lib/theme/: index.ts
src/types/: index.ts
